--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --coverage"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "1.2.8",
+    "@deskpro/app-sdk": "1.2.13",
     "@heroicons/react": "1.0.6",
+    "@swc/core": "^1.3.46",
+    "@tanstack/react-query": "^4.28.0",
     "polished": "^4.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "node-fetch": "^3.3.0",
     "@jest/globals": "^29.3.1",
     "@swc/jest": "^0.2.22",
     "@testing-library/jest-dom": "^5.16.5",
@@ -42,6 +45,7 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^29.3.1",
+    "node-fetch": "^3.3.0",
     "rimraf": "^3.0.2",
     "rollup-plugin-copy": "3.4.0",
     "slugify": "^1.6.5",
