--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "bumpManifestVer": "node ./bin/bumpManifestVer.js"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "1.2.13",
+    "@deskpro/app-sdk": "3.0.15",
+    "@deskpro/deskpro-ui": "7.18.1",
     "@heroicons/react": "1.0.6",
-    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query": "^4.36.1",
     "polished": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
+    "react-resize-observer": "^1.1.1",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
-    "prettier": "^2.8.7",
     "@swc/core": "^1.3.46",
     "@swc/jest": "^0.2.22",
     "@testing-library/jest-dom": "^5.16.5",
@@ -48,6 +49,7 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^29.3.1",
     "node-fetch": "^3.3.0",
+    "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
     "rollup-plugin-copy": "3.4.0",
     "slugify": "^1.6.5",
