--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "bumpManifestVer": "node ./bin/bumpManifestVer.js"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "3.0.15",
-    "@deskpro/deskpro-ui": "7.18.1",
+    "@deskpro/app-sdk": "^3.0.18",
+    "@deskpro/deskpro-ui": "^7.18.4",
     "@heroicons/react": "1.0.6",
     "@tanstack/react-query": "^4.36.1",
     "polished": "^4.1.1",
