--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@deskpro/deskpro-ui": "^7.18.4",
     "@heroicons/react": "1.0.6",
     "@tanstack/react-query": "^4.36.1",
+    "iframe-resizer": "^4.3.11",
     "polished": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
