--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     "verify_settings": {
       "title": "",
       "type": "app_embedded",
-      "options": { "entrypoint": "http://localhost:3003/#/admin/verify_settings" },
+      "options": { "entrypoint": "#/admin/verify_settings" },
       "isRequired": false,
       "isBackendOnly": true,
       "order": 20
