[Chore] Update GPS branding to "Advanced Connect"

--- a/manifest.json
+++ b/manifest.json
@@ -16,10 +16,11 @@
     }
   ],
   "settings": {
-    "use_deskpro_saas": {
-      "title": "One-Click Installation",
+    "use_advanced_connect": {
+      "title": "Advanced Connect",
+      "description": "Follow the setup guide and use your credentials to connect the app to Deskpro.",
       "type": "boolean",
-      "default": true,
+      "default": false,
       "isRequired": false,
       "isBackendOnly": false,
       "order": 5
@@ -30,7 +31,7 @@
       "isRequired": false,
       "isBackendOnly": false,
       "default": false,
-      "condition": "settings.use_deskpro_saas != true",
+      "condition": "settings.use_advanced_connect != false",
       "order": 10
     },
     "access_token": {
@@ -39,7 +40,7 @@
       "type": "string",
       "isRequired": false,
       "isBackendOnly": true,
-      "condition": "settings.use_deskpro_saas != true && settings.use_access_token == true",
+      "condition": "settings.use_advanced_connect != false && settings.use_access_token == true",
       "order": 20
     },
     "verify_settings": {
@@ -51,7 +52,7 @@
       },
       "isRequired": false,
       "isBackendOnly": true,
-      "condition": "settings.use_deskpro_saas != true && settings.use_access_token == true",
+      "condition": "settings.use_advanced_connect != false && settings.use_access_token == true",
       "order": 30
     },
     "client_id": {
@@ -59,7 +60,7 @@
       "type": "string",
       "isRequired": false,
       "isBackendOnly": false,
-      "condition": "settings.use_deskpro_saas != true && settings.use_access_token != true",
+      "condition": "settings.use_advanced_connect != false && settings.use_access_token != true",
       "order": 40
     },
     "client_secret": {
@@ -67,7 +68,7 @@
       "type": "string",
       "isRequired": false,
       "isBackendOnly": true,
-      "condition": "settings.use_deskpro_saas != true && settings.use_access_token != true",
+      "condition": "settings.use_advanced_connect != false && settings.use_access_token != true",
       "order": 50
     },
     "callback_url": {
@@ -78,7 +79,7 @@
       },
       "isRequired": false,
       "isBackendOnly": true,
-      "condition": "settings.use_deskpro_saas != true && settings.use_access_token != true",
+      "condition": "settings.use_advanced_connect != false && settings.use_access_token != true",
       "order": 60
     }
   },
