[Fix] Fix mkdir error when `~/.ssh` already exists

--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Prep local dev
         run: |
           touch ~/.gitconfig
-          mkdir ~/.ssh
+          mkdir -p ~/.ssh
           git config --global user.name "$(git log -1 --pretty=format:%an)"
           git config --global user.email "$(git log -1 --pretty=format:%ae)"
 
