--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@deskpro/app-sdk": "^5.1.1",
     "@deskpro/deskpro-ui": "^8.3.1",
     "@heroicons/react": "1.0.6",
+    "@sentry/react": "^9.22.0",
+    "@sentry/vite-plugin": "^3.5.0",
     "@tanstack/react-query": "^4.36.1",
     "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2",
     "react-resize-observer": "^1.1.1",
     "react-router-dom": "^6.30.0"
   },
